--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <h1 class="text-uppercase">Our mission</h1>
         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora voluptate aperiam sit rerum neque dignissimos dolorum ipsum veniam maiores facilis ut fuga molestias officia tempore molestiae obcaecati, consequuntur quisquam necessitatibus.</p>
       </header>
+      <div class="cards">
       <div class="card">
         <img src="https://picsum.photos/500/300" alt="Random picture">
         <h3>Lorem ipsum</h3>
@@ -44,14 +45,15 @@
         <h3>Lorem ipsum</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam fuga reiciendis velit non est minus, iusto, ipsum ex harum maiores nisi id consectetur repellendus natus reprehenderit error. Animi, iste? Maxime!</p>
       </div>
+    </div>
     </section>
-    <section id="about">
-      <header>
+    <section id="about" class="align-center">
+      <header class="align-center">
         <h1 class="text-uppercase">About us</h1>
         <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, odio debitis repellendus natus dolor magnam sunt minima delectus et sed consequatur ea dolore unde voluptatum maxime! Quidem nam nemo quod.</p>
         <h2>Find us</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus facere excepturi temporibus aliquam libero illum placeat rem commodi voluptate quae non consequuntur facilis, vitae doloremque alias at! Voluptate, beatae voluptatum.</p>
-        <img src="https://via.placeholder.com/800x500?text=Find us using this map" alt="Map">
+        <img src="https://via.placeholder.com/800x500?text=Find us using this map" alt="Map" class="map">
       </header>
 
     </section>
