--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body class="flex flex-column h-100">
 
-  <nav class="header container w-100">
-    <a href="#" class="logo">Brand</a>
+  <nav class="header w-100">
+    <a href="#" class="logo"><img src="https://picsum.photos/500/300" alt="Random picture" class="logoimg"><p class="logotext"></p></a>
     <ul class="nav header">
       <li class="headeritem"><a href="#">Home</a   ></li>
       <li class="headeritem"><a href="#mission">Mission</a></li>
@@ -24,7 +24,7 @@
       <h1 class="text-uppercase">We are responsive</h1>
       <a class="btn" href="#mission">Learn more</a>
     </header>
-    <section id="#mission">
+    <section id="#mission" class="darkbg">
       <header>
         <h1 class="text-uppercase">Our mission</h1>
         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora voluptate aperiam sit rerum neque dignissimos dolorum ipsum veniam maiores facilis ut fuga molestias officia tempore molestiae obcaecati, consequuntur quisquam necessitatibus.</p>
@@ -51,8 +51,8 @@
       <header class="align-center">
         <h1 class="text-uppercase">About us</h1>
         <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, odio debitis repellendus natus dolor magnam sunt minima delectus et sed consequatur ea dolore unde voluptatum maxime! Quidem nam nemo quod.</p>
-        <h2>Find us</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus facere excepturi temporibus aliquam libero illum placeat rem commodi voluptate quae non consequuntur facilis, vitae doloremque alias at! Voluptate, beatae voluptatum.</p>
+        <h1>Find us</h1>
+        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus facere excepturi temporibus aliquam libero illum placeat rem commodi voluptate quae non consequuntur facilis, vitae doloremque alias at! Voluptate, beatae voluptatum.</p>
         <img src="https://via.placeholder.com/800x500?text=Find us using this map" alt="Map" class="map">
       </header>
 
